# self_balancing_robot

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
launch/: display.launch  gazebo.launch
meshes/: leftwheel_Link.STL  rightwheel_Link.STL
scripts/: script.py
urdf/: self_balancing_robot.csv  self_balancing_robot.urdf
